--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: red;
         }
         header {
-            background-color: #333;
+            background-color: blue;
             color: #fff;
             padding: 1rem;
             text-align: center;
@@ -22,7 +22,7 @@
             padding: 1rem;
         }
         footer {
-            background-color: #333;
+            background-color: green;
             color: #fff;
             text-align: center;
             padding: 0.5rem;
