--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title><background-color: red;>My Website</title>
    
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: red;
+            background-color: black;
         }
         header {
-            background-color: blue;
+            background-color: #333;
             color: #fff;
             padding: 1rem;
             text-align: center;
@@ -22,7 +22,7 @@
             padding: 1rem;
         }
         footer {
-            background-color: green;
+            background-color: #333;
             color: #fff;
             text-align: center;
             padding: 0.5rem;
