--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1><color: black;>Welcome to My Website</h1>
         <nav>
             <a h
