--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         header {
             background-color: #333;
-            color: #fff;
+            color: yellow;
             padding: 1rem;
             text-align: center;
         }
@@ -23,7 +23,7 @@
         }
         footer {
             background-color: #333;
-            color: #fff;
+            color: green;
             text-align: center;
             padding: 0.5rem;
             position: fixed;
