--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><background-color: red;>My Website</title>
+    <title>My Website</title>
    
     <style>
         body {
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: black;
+            background-image: <img src="pic_trulli.jpg" alt="Italian Trulli">
         }
         header {
             background-color: #333;
@@ -34,6 +35,6 @@
 </head>
 <body>
     <header>
-        <h1><color: black;>Welcome to My Website</h1>
+        <h1>Welcome to My Website</h1>
         <nav>
             <a h
