--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: black;
+            background-color: white;
             background-image: <img src="pic_trulli.jpg" alt="Italian Trulli">
         }
         header {
