--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-image: <img src="pic_trulli.jpg" alt="Italian Trulli">
         }
         header {
-            background-color: #333;
+            background-color: white;
             color: yellow;
             padding: 1rem;
             text-align: center;
