--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             padding: 1rem;
         }
         footer {
-            background-color: #333;
+            background-color: green;
             color: green;
             text-align: center;
             padding: 0.5rem;
