--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             padding: 1rem;
         }
         footer {
-            background-color: green;
-            color: green;
+            background-color: white;
+            color: white;
             text-align: center;
             padding: 0.5rem;
             position: fixed;
