--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             margin: 0;
             padding: 0;
             background-color: white;
-            background-image: <img src="pic_trulli.jpg" alt="Italian Trulli">
+            background-image: url('https://i.pinimg.com/originals/2c/55/f9/2c55f9c9326e9232526557b63cd59638.gif')
+
+           
         }
         header {
             background-color: white;
