--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         header {
             
-            color: yellow;
+            color: green;
             padding: 1rem;
             text-align: center;
         }
