--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 100;
             background-color: white;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJDraIIhRRWp-1W6nopXJOs-g5aSeRJZoJ17Ie2ssQJRZvCCcjFGlwvfMYLA&s')
+            background-repeat: no-repeat;
            
         }
         header {
