--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: white;
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJDraIIhRRWp-1W6nopXJOs-g5aSeRJZoJ17Ie2ssQJRZvCCcjFGlwvfMYLA&s')
+            background-image: url('IMG_20240610_195501_341.jpg')
             background-repeat: no-repeat;
            
         }
