--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: white;
-            background-image: url('IMG_20240610_195501_341.jpg')
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy1DYVDrpau3NFKXfIImU2fnieOVhIvu6ukAwcbL5WtlapNMgzo4px7zh_Ow&s')
             background-repeat: no-repeat;
            
         }
