--- a/web.html
+++ b/web.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy1DYVDrpau3NFKXfIImU2fnieOVhIvu6ukAwcbL5WtlapNMgzo4px7zh_Ow&s');
-            background-image: no repeat;
+            background-repeat: no repeat;
         }
 
         header {
