--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 100;
-            padding: 100;
+            margin: 100px;
+            padding: 100px;
             background-color: white;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2BjFcg6Sp0FkUslmmrCuWQQPFlTn0e23efg&s');
             background-repeat: no-repeat;
