--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 100;
-            padding: 100;
+            margin: 0;
+            padding: 0;
             background-color: white;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2BjFcg6Sp0FkUslmmrCuWQQPFlTn0e23efg&s');
+            background-size: cover;
+            background-position: center;
             background-repeat: no-repeat;
            
         }
