--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: white;
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2BjFcg6Sp0FkUslmmrCuWQQPFlTn0e23efg&s');
+            /*background-color: white;*/
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ691-jsTTXRAmd0xWO3ym75cRTlTRa1Dxcmg&s');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
