--- a/web.html
+++ b/web.html
@@ -12,7 +12,7 @@
             padding: 0;
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy1DYVDrpau3NFKXfIImU2fnieOVhIvu6ukAwcbL5WtlapNMgzo4px7zh_Ow&s');
             background-size: cover;
-            background-position: center;
+            /*background-position: center;*/
             background-repeat: no repeat;
             
         }
