--- a/web.html
+++ b/web.html
@@ -68,6 +68,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
+        <a href="#MySelf">About My Self</a>
     </nav>
 
     <div class="main-content">
