--- a/web.html
+++ b/web.html
@@ -60,7 +60,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Work Place</h1>
+        <h1>Welcome To My Work Place</h1>
     </header>
 
     <nav>
@@ -68,7 +68,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
-        <a href="#MySelf">About Me!f</a>
+        <a href="#MySelf">About Me !</a>
     </nav>
 
     <div class="main-content">
