--- a/web.html
+++ b/web.html
@@ -19,7 +19,7 @@
 
         header {
             background-color: #333;
-            color: 00FFFF;
+            color: #D2B48C;
             padding: 10px 0;
             text-align: center;
         }
