--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         header {
             
-            color: black;
+            color: #D2B48C;
             padding: 1rem;
             text-align: center;
         }
