--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             /*background-color: white;*/
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvEpTB40I-9lh2MTNSMo-yiKOsfmvIItMKwQ&s');
             background-size: cover;
-            background-position: center;
+            /*background-position: center;*/
             background-repeat: no-repeat;
         }
 
