--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             /*background-color: white;*/
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvEpTB40I-9lh2MTNSMo-yiKOsfmvIItMKwQ&s');
-            background-size: fit;
+            background-size: full;
             /*background-position: center;*/
             background-repeat: no-repeat;
         }
