--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             /*background-color: white;*/
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkbyuM-8Y2n_vN9bYOI3K9VhOiv4BnIM3cuA&s');
-            background-size: full;
+            background-size: cover;
             /*background-position: center;*/
             background-repeat: no-repeat;
         }
