--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #333;
+            /*background-color: #333;*/
             color: #D2B48C;
             padding: 10px 0;
             text-align: center;
