--- a/web.html
+++ b/web.html
@@ -22,6 +22,8 @@
             color: #D2B48C;
             padding: 10px 0;
             text-align: center;
+        h2 {
+            color: white;
         }
 
         nav {
