--- a/web.html
+++ b/web.html
@@ -22,9 +22,6 @@
             color: #D2B48C;
             padding: 10px 0;
             text-align: center;
-        h2 {
-            color: white;
-        }
 
         nav {
             text-align: center;
@@ -44,6 +41,7 @@
         }
 
         .main-content {
+            text-color: white;
             padding: 20px;
             text-align: center;
         }
