--- a/web.html
+++ b/web.html
@@ -44,6 +44,7 @@
         .main-content {
             padding: 20px;
             text-align: center;
+            text-color: white;
         }
 
         footer {
