--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         header {
             /*background-color: #333;*/
-            color: #D2B48C;
+            color: #333;
             padding: 10px 0;
             text-align: center;
         }
