--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #D2B48C;
+            background-color: grey;
             color: #333;
             padding: 10px 0;
             text-align: center;
