--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             /*background-position: center;*/
             background-repeat: no-repeat;
         }
+        {
+            <p>Check out this <a href="https://rehanx17.github.io/web.html" target="_blank">amazing website</a> for more information!</p>
+        }
+
+        
 
         header {
             background-color: grey;
