--- a/web3.html
+++ b/web3.html
@@ -13,6 +13,7 @@
         }
 
         body {
+            <img _ngcontent-serverapp-c67="" src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150">
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
             color: #333;
