--- a/web4.html
+++ b/web4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>komal</title>
+    <title>Rehan</title>
     <style>
      nav li{
     display: inline-block;
@@ -47,21 +47,7 @@ nav li a{
     margin:5px;
     padding:15px;
 }
-#img2{
-    padding-right:4px;
-    margin-right:17px;
-}
-#img4{
-    padding-left:2px;
-    margin-left:1px;
-}
-#img5{
-margin-right:35px;
- padding-left:40px;
-}
-#img3{
-     padding-left:4px;
-}
+
 b{
     background-color:#e4c1f9;
     font:15px;
@@ -80,7 +66,7 @@ b{
             <nav class="nav" >
           <li><a href="homep.html">Home</a></li> 
           <li><a href="aboutus.html">About Me</a></li> 
-          <li><a href="prajkta.html">Student Form</a></li>
+          <li><a href="web2.html">Student Form</a></li>
           <li><a href="calculator.html">Calculator in Js</a></li> 
           <li><a href="login.html">login/sign up </a></li> 
           <li><a href="curd.html">Curd form in php</a></li> 
