--- a/web4.html
+++ b/web4.html
@@ -59,7 +59,7 @@ b{
     <br><br>
     
         </head>
-       <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=""           src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
+       <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67= "src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
        
         <ul>
             <div class="d2">
