--- a/web4.html
+++ b/web4.html
@@ -66,10 +66,10 @@ b{
             <nav class="nav" >
           <li><a href="homep.html">Home</a></li> 
           <li><a href="aboutus.html">About Me</a></li> 
-          <li><a href="web2.html">Student Form</a></li>
-          <li><a href="calculator.html">Calculator in Js</a></li> 
-          <li><a href="login.html">login/sign up </a></li> 
-          <li><a href="curd.html">Curd form in php</a></li> 
+          <li><a href="web.html">website 1</a></li>
+          <li><a href="web2.html">website 2</a></li> 
+          <li><a href="web3.html">website 3 </a></li> 
+          <li><a href="index.html">index</a></li> 
 
           </div>
         
