--- a/web4.html
+++ b/web4.html
@@ -66,7 +66,7 @@ b{
             <nav class="nav" >
           <li><a href="homep.html">Home</a></li> 
           <li><a href="aboutus.html">About Me</a></li> 
-          <li><a href="web.html">website 1</a></li>
+          <li><a href="web.html" target="_blank"> website 1</a></li>
           <li><a href="web2.html">website 2</a></li> 
           <li><a href="web3.html">website 3 </a></li> 
           <li><a href="index.html">index</a></li> 
