--- a/web4.html
+++ b/web4.html
@@ -67,9 +67,10 @@ b{
           <li><a href="homep.html">Home</a></li> 
           <li><a href="aboutus.html">About Me</a></li> 
           <li><a href="web.html" target="_blank"> website 1</a></li>
-          <li><a href="web2.html">website 2</a></li> 
-          <li><a href="web3.html">website 3 </a></li> 
-          <li><a href="index.html">index</a></li> 
+          <li><a href="web2.html" target="_blank"> website 2</a></li> 
+          <li><a href="web3.html" target="_blank"> website 3 </a></li> 
+          <li><a href="index.html" target="_blank"> index</a></li> 
+       
 
           </div>
         
