--- a/My_Website.html
+++ b/My_Website.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <div> class="logo">
-			<img src=".png">
+			<img src="my-project-high-resolution-logo-transparent.png">
 		</div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
