--- a/My_Website.html
+++ b/My_Website.html
@@ -55,7 +55,11 @@ b{
     background-color:#e4c1f9;
     font:15px;
 }
-
+	    
+.logo img{
+	float: left;
+	width: 50px;
+	height: 10%;
 
 </style>
     
