--- a/My_Website.html
+++ b/My_Website.html
@@ -26,12 +26,14 @@ nav li a{
 
  
         body{
+	    background-image: "my-project-high-resolution-logo-transparent.png";
             background-color: #edf6f9;
              background-repeat: no-repeat; 
     background-attachment: fixed;
     background-position: center;
     display: cover;
     background-size: cover  ;
+		
   
 }    
     a:link{
