--- a/My_Website.html
+++ b/My_Website.html
@@ -26,7 +26,10 @@ nav li a{
 
  
         body{
-	    background-image: "my-project-high-resolution-logo-transparent.png";
+	    background-image: ('download.jpg');
+            background-size: cover;
+            /*background-position: center;*/
+            background-repeat: no repeat;
             background-color: #edf6f9;
              background-repeat: no-repeat; 
     background-attachment: fixed;
