--- a/My_Website.html
+++ b/My_Website.html
@@ -66,7 +66,7 @@ b{
         <ul>
             <div class="d2">
             <nav class="nav" >
-          <li><a href="homep.html">Home</a></li> 
+          <li><a href="My_Website.html">Home</a></li> 
           <li><a href="aboutus.html">About Me</a></li> 
           <li><a href="web.html" target="_blank"> website 1</a></li>
           <li><a href="web2.html" target="_blank"> website 2</a></li> 
