--- a/My_Website.html
+++ b/My_Website.html
@@ -19,14 +19,11 @@ nav li a{
     background-color:#e4c1f9;
     
 }
-    .d2{
-            float: right;
-            color: red;
-        }
+
 
  
         body{
-	    background-image: ('download.jpg');
+	    background-image: "download.jpg";
             background-color: #edf6f9;
              background-repeat: no-repeat; 
     background-attachment: fixed;
