--- a/My_Website.html
+++ b/My_Website.html
@@ -27,7 +27,7 @@ nav li a{
 
  
         body{
-	    background-image: "download.jpg";
+	    /*background-image: "download.jpg";*/
             background-color: #edf6f9;
              background-repeat: no-repeat; 
     background-attachment: fixed;
@@ -44,7 +44,7 @@ nav li a{
  h1{
     color: blue;
     font-size:50;
-    background-color:#b7e4c7;
+    background-color:#ffcc00;
 }
 .d3{
     margin:5px;
