--- a/My_Website.html
+++ b/My_Website.html
@@ -44,7 +44,7 @@ nav li a{
  h1{
     color: blue;
     font-size:50;
-    background-color:#ffcc00;
+    /*background-color:#ffcc00;*/
 }
 .d3{
     margin:5px;
