--- a/My_Website.html
+++ b/My_Website.html
@@ -55,6 +55,27 @@ b{
     background-color:#ffcc00;
     font:15px;
 }
+footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #555;
+        }	    
 	    
 
 </style>
