--- a/My_Website.html
+++ b/My_Website.html
@@ -94,6 +94,8 @@ footer {
           <li><a href="web2.html" target="_blank"> website 2</a></li> 
           <li><a href="web3.html" target="_blank"> website 3 </a></li> 
           <li><a href="form.py" target="_blank"> Form</a></li> 
+	<p id="message">Click the button to change the background color!</p>
+        <button onclick="changeBackground()">Change Background Color</button>	    
        
 
           </div>
