--- a/My_Website.html
+++ b/My_Website.html
@@ -59,8 +59,8 @@ footer {
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 50px;
-            position: fixed;
+            padding: 10px;
+            position: center;
             bottom: 0;
             width: 100%;
         }
