--- a/My_Website.html
+++ b/My_Website.html
@@ -60,8 +60,8 @@ footer {
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: center;
-            bottom: 0;
+            position: fixed;
+            bottom: 10;
             width: 100%;
         }
 
