--- a/My_Website.html
+++ b/My_Website.html
@@ -56,8 +56,8 @@ b{
     font:15px;
 }
 footer {
-            background-color: #333;
-            color: #fff;
+            /*background-color: #333;*/
+            color: #333;
             text-align: center;
             padding: 10px;
             position: fixed;
