--- a/My_Website.html
+++ b/My_Website.html
@@ -67,7 +67,7 @@ footer {
 
         button {
             padding: 10px 20px;
-            background-color: #333;
+            /*background-color: #333;*/
             color: #fff;
             border: none;
             cursor: pointer;
