--- a/My_Website.html
+++ b/My_Website.html
@@ -68,7 +68,7 @@ footer {
         button {
             padding: 10px 20px;
             /*background-color: #333;*/
-            color: #fff;
+            color: #333;
             border: none;
             cursor: pointer;
         }
