--- a/My_Website.html
+++ b/My_Website.html
@@ -27,13 +27,14 @@ nav li a{
 
  
         body{
-	    /*background-image: "download.jpg";*/
-            background-color: #edf6f9;
-             background-repeat: no-repeat; 
-    background-attachment: fixed;
-    background-position: center;
-    display: cover;
-    background-size: cover  ;
+		background-image: url('path-to-your-image.jpg'); 
+		/*background-image: "download.jpg";*/
+		background-color: #edf6f9;
+		background-repeat: no-repeat; 
+		background-attachment: fixed;
+		background-position: center;
+		display: cover;
+		background-size: cover  ;
 		
   
 }    
