--- a/My_Website.html
+++ b/My_Website.html
@@ -27,9 +27,9 @@ nav li a{
 
  
         body{
-		background-image: url('path-to-your-image.jpg'); 
+		background-image: url('download.jpg'); 
 		/*background-image: "download.jpg";*/
-		background-color: #edf6f9;
+		/*background-color: #edf6f9;*/
 		background-repeat: no-repeat; 
 		background-attachment: fixed;
 		background-position: center;
