--- a/New_Website.html
+++ b/New_Website.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Amazing Website</title>
+    <title>My Stunning Website</title>
     <style>
-        /* Reset some basic styles */
+        /* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -16,69 +14,44 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #f4f4f4;
             color: #333;
+            line-height: 1.6;
+            transition: background-color 0.5s ease;
+            background-image: url('download.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
-        /* Smooth Scrolling */
-        html {
-            scroll-behavior: smooth;
+        h1 {
+            color: blue;
+            font-size: 50px;
+            text-align: center;
+            margin-top: 20px;
         }
 
         /* Header Section */
         header {
             height: 100vh;
-            /*background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNkufI8kkEvZyKr-PbiYaw-uohbRcVZEtNdQ&s');*/
-            background-size: cover;
-            background-position: center;
+            background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #fff;
             text-align: center;
         }
 
         header h1 {
             font-size: 3em;
-            margin-bottom: 20px;
-            animation: fadeInDown 2s;
+            margin-bottom: 10px;
         }
 
-        header p {
-            font-size: 1.5em;
-            animation: fadeInUp 2s;
-        }
-
-        @keyframes fadeInDown {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeInUp {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Navigation Bar */
+        /* Navigation */
         nav {
             position: fixed;
-            width: 100%;
             top: 0;
-            left: 0;
+            width: 100%;
             background-color: rgba(0, 0, 0, 0.7);
             padding: 15px 0;
             text-align: center;
@@ -89,177 +62,109 @@
             display: inline-block;
             margin-right: 40px;
             padding-right: 70px;
+            font-size: larger;
         }
 
         nav li a {
             text-decoration: none;
-            color: #fff;
+            color: white;
             background-color: #93C572;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            transition: color 0.3s;
+            padding: 10px;
+            border-radius: 5px;
         }
 
         nav li a:hover {
             color: #D2B48C;
         }
 
-        /* Main Content */
-        .main-content {
-            padding: 50px 20px;
-            text-align: center;
-            background-color: #fff;
-        }
-
-        .main-content h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        /* Services Section */
-        .services {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            background-color: #fff;
-            padding: 20px;
-            width: 300px;
-            margin: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            transition: transform 0.3s;
-        }
-
-        .card:hover {
-            transform: translateY(-10px);
-        }
-
-        .card img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-
-        .card h3 {
-            font-size: 1.5em;
-            margin: 15px 0;
-        }
-
-        /* About Me Section */
-        .about {
-            padding: 50px 20px;
-            background-color: #D2B48C;
-            color: #fff;
+        /* Main Content Section */
+        section {
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: 0 auto;
             text-align: center;
         }
 
-        .about h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        .about p {
+        section p {
             font-size: 1.2em;
-            margin: 20px 0;
+            margin-bottom: 20px;
+            color: #555;
         }
 
-        /* Footer */
+        /* Parallax Section */
+        .parallax {
+            background-image: url('https://www.example.com/parallax-image.jpg');
+            height: 400px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+
+        .parallax h2 {
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3em;
+            letter-spacing: 3px;
+        }
+
+        /* Footer Section */
         footer {
             background-color: #333;
-            color: #fff;
-            padding: 20px 0;
+            color: white;
             text-align: center;
+            padding: 20px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
 
         footer p {
-            margin: 0;
+            margin-bottom: 5px;
         }
 
-        /* Additional Styling for Second Code */
-        .d2 {
-            float: right;
-            color: red;
+        /* Smooth Scroll */
+        html {
+            scroll-behavior: smooth;
         }
 
-        body {
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-            background-size: cover;
-        }
-
-        h1 {
-            color: blue;
-            font-size: 50px;
-        }
-
-        b {
-            background-color: #93C572;
-            font-size: 15px;
-        }
+       
     </style>
 </head>
-
 <body>
-
-    <!-- Navigation Bar -->
+    <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About Me</a></li>
             <li><a href="web.html" target="_blank">Website 1</a></li>
             <li><a href="web2.html" target="_blank">Website 2</a></li>
             <li><a href="web3.html" target="_blank">Website 3</a></li>
-            <li><a href="form.py" target="_blank">Form</a></li>
+            <li><a href="web4.html" target="_blank">Website 4</a></li>
         </ul>
     </nav>
 
-    <!-- Header / Hero Section -->
+    <!-- Header Section -->
     <header id="home">
-        <div>
-            <h1>Welcome to My Amazing Website</h1>
-            <img src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150">
-            <p>Creating a unique web experience</p>
-        </div>
+        <h1>Welcome to My Stunning Website</h1>
     </header>
 
-    <!-- Main Content -->
-    <div class="main-content">
-        <h2>What We Offer</h2>
-        <div class="services">
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Service 1">
-                <h3>Web Development</h3>
-                <p>We create high-quality websites that meet modern standards and user expectations.</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Service 2">
-                <h3>Graphic Design</h3>
-                <p>Our design team creates visually stunning graphics that leave an impression.</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/300" alt="Service 3">
-                <h3>SEO Optimization</h3>
-                <p>We ensure your website ranks high in search results for better visibility and traffic.</p>
-            </div>
-        </div>
+
+
+    <!-- Parallax Section -->
+    <div class="parallax">
+        <h2>Stunning Visuals</h2>
     </div>
 
-    <!-- About Me Section -->
-    <div class="about" id="about">
-        <h2>About Me</h2>
-        <p>Hello! I'm a passionate web developer with experience in creating interactive and visually appealing websites. My focus is on crafting user-friendly designs with modern functionality. Let's build something great together!</p>
-    </div>
-
-    <!-- Footer -->
-    <footer id="contact">
-        <p>&copy; 2024 My Amazing Website. All rights reserved. Designed with ❤️</p>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 My Stunning Website. All rights reserved.</p>
+        <p>Follow us on <a href="https://twitter.com" target="_blank" style="color: #667eea;">Twitter</a></p>
     </footer>
 
 </body>
-
 </html>
