--- a/New_Website.html
+++ b/New_Website.html
@@ -77,23 +77,10 @@
             color: #D2B48C;
         }
 
-        /* Main Content Section */
-        section {
-            padding: 60px 20px;
-            max-width: 1000px;
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        section p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-            color: #555;
-        }
 
         /* Parallax Section */
         .parallax {
-            background-image: url('https://www.example.com/parallax-image.jpg');
+            /*background-image: url('https://www.example.com/parallax-image.jpg');*/
             height: 400px;
             background-attachment: fixed;
             background-position: center;
@@ -145,6 +132,7 @@
             <li><a href="web2.html" target="_blank">Website 2</a></li>
             <li><a href="web3.html" target="_blank">Website 3</a></li>
             <li><a href="web4.html" target="_blank">Website 4</a></li>
+            <li><a href="My_Website.html" target="_blank">Website 4</a></li>
         </ul>
     </nav>
 
