--- a/New_Website.html
+++ b/New_Website.html
@@ -80,7 +80,7 @@
 
         /* Parallax Section */
         .parallax {
-            /*background-image: url('https://www.example.com/parallax-image.jpg');*/
+            background-image: url('download.jpg');
             height: 400px;
             background-attachment: fixed;
             background-position: center;
@@ -122,6 +122,7 @@
        
     </style>
 </head>
+    <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
 <body>
     <!-- Navigation -->
     <nav>
