--- a/New_Website.html
+++ b/New_Website.html
@@ -127,6 +127,7 @@
     <!-- Navigation -->
     <nav>
         <ul>
+            <div class="d2">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="web.html" target="_blank">Website 1</a></li>
