--- a/New_Website.html
+++ b/New_Website.html
@@ -11,6 +11,10 @@
             padding: 0;
             box-sizing: border-box;
         }
+        .d2{
+	 float: right;
+	 color: red;
+ }
 
         body {
             font-family: 'Arial', sans-serif;
