--- a/New_Website.html
+++ b/New_Website.html
@@ -38,7 +38,7 @@
         /* Header Section */
         header {
             height: 100vh;
-            background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            /*background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);*/
             color: white;
             display: flex;
             align-items: center;
