--- a/New_Website.html
+++ b/New_Website.html
@@ -39,7 +39,7 @@
         header {
             height: 100vh;
             /*background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);*/
-            color: white;
+            color: black;
             display: flex;
             align-items: center;
             justify-content: center;
