--- a/New_Website.html
+++ b/New_Website.html
@@ -76,6 +76,9 @@
             padding: 10px;
             border-radius: 5px;
         }
+	    .d2{
+	 float: right;
+	 color: red;
 
         nav li a:hover {
             color: #D2B48C;
