--- a/New_Website.html
+++ b/New_Website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Stunning Website</title>
+    <title>My Github Link's Website</title>
     <style>
         /* General Reset */
         * {
@@ -60,7 +60,7 @@
         }
 
         nav li {
-            display: inline-block;
+            /*display: inline-block;*/
             margin-right: 10px;
             padding-right: 60px;
             font-size: larger;
