--- a/New_Website.html
+++ b/New_Website.html
@@ -60,7 +60,7 @@
         }
 
         nav li {
-            /*display: inline-block;*/
+            display: inline-block;
             margin-right: 10px;
             padding-right: 60px;
             font-size: larger;
@@ -72,6 +72,7 @@
             background-color: #93C572;
             padding: 10px;
             border-radius: 5px;
+            text-align: center
         }
 
         nav li a:hover {
