--- a/New_Website.html
+++ b/New_Website.html
@@ -41,6 +41,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            
         }
 
         header h1 {
@@ -72,7 +73,8 @@
             background-color: #93C572;
             padding: 10px;
             border-radius: 5px;
-            text-align: center
+            text-align: center;
+            float: right;
         }
 
         nav li a:hover {
