--- a/My_Website.html
+++ b/My_Website.html
@@ -93,6 +93,7 @@ footer {
 
 <footer>
         &copy; 2024 My Website. All rights reserved.
+	 <p>Follow us on <a href="https://twitter.com" target="_blank" style="color: #667eea;">Twitter</a></p>
     </footer>
 
            
