--- a/My_Website.html
+++ b/My_Website.html
@@ -19,6 +19,10 @@ nav li a{
     background-color:#93C572;
     
 }
+	    nav li a:hover {
+            color: #D2B48C;
+        }
+
  .d2{
 	 float: right;
 	 color: red;
