--- a/My_Website.html
+++ b/My_Website.html
@@ -61,7 +61,7 @@ b{
     font:15px;
 }
 footer {
-            /*background-color: #333;*/
+            background-color: #333;
             color: #333;
             text-align: center;
             padding: 10px;
