--- a/My_Website.html
+++ b/My_Website.html
@@ -99,7 +99,7 @@ html {
 
 <footer>
         &copy; 2024 My Website. All rights reserved.
-	 <p>Follow us on <a href="https://twitter.com" target="_blank" style="color: #667eea;">Twitter</a></p>
+	 <p>Follow us on <a href="https://twitter.com" target="_blank" style="color: blue;">Twitter</a></p>
     </footer>
 
            
