--- a/My_Website.html
+++ b/My_Website.html
@@ -62,7 +62,7 @@ b{
 }
 footer {
             background-color: #333;
-            color: #333;
+            color: white;
             text-align: center;
             padding: 10px;
             position: fixed;
