--- a/New_Website.html
+++ b/New_Website.html
@@ -143,7 +143,7 @@
 
     <!-- Header Section -->
     <header id="home">
-        <h1>Welcome to My Stunning Website</h1>
+        <h1>Welcome to My Website</h1>
     </header>
 
 
