--- a/My_Website.html
+++ b/My_Website.html
@@ -96,6 +96,10 @@ html {
        
 
           </div>
+<!-- Parallax Section -->
+    <div class="parallax">
+        <h2>Stunning Visuals</h2>
+    </div>		
 
 <footer>
         &copy; 2024 My Website. All rights reserved.
