--- a/My_Website.html
+++ b/My_Website.html
@@ -59,6 +59,27 @@ nav li a:hover {
 b{
     background-color:#93C572;
     font:15px;
+/* Parallax Section */
+        .parallax {
+            background-image: url('download.jpg');
+            height: 400px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+
+        .parallax h2 {
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3em;
+            letter-spacing: 3px;
+        }
+	
 }
 footer {
             background-color: #333;
