--- a/My_Website.html
+++ b/My_Website.html
@@ -13,7 +13,7 @@
     text-decoration: none;
    font-size: larger;
 } 
-nav li a{
+nav li a:hover {
     text-decoration: none;
     color: black;
     background-color:#93C572;
@@ -59,8 +59,9 @@ nav li a:hover {
 b{
     background-color:#93C572;
     font:15px;
+}	
 /* Parallax Section */
-        .parallax {
+       /* .parallax {
             background-image: url('download.jpg');
             height: 400px;
             background-attachment: fixed;
@@ -80,7 +81,7 @@ b{
             letter-spacing: 3px;
         }
 	
-}
+
 footer {
             background-color: #333;
             color: white;
