--- a/My_Website.html
+++ b/My_Website.html
@@ -13,7 +13,7 @@
     text-decoration: none;
    font-size: larger;
 } 
-nav li a:hover {
+nav li{
     text-decoration: none;
     color: black;
     background-color:#93C572;
