--- a/My_Website.html
+++ b/My_Website.html
@@ -109,7 +109,7 @@ html {
             <div class="d2">
             <nav class="nav" >
           <li><a href="My_Website.html">Home</a></li> 
-          <li><a href="aboutus.html">About Me</a></li> 
+          <li><a href="aboutme.html">About Me</a></li> 
           <li><a href="web.html" target="_blank"> website 1</a></li>
           <li><a href="web2.html" target="_blank"> website 2</a></li> 
           <li><a href="web3.html" target="_blank"> website 3 </a></li> 
