--- a/aboutme.html
+++ b/aboutme.html
@@ -1,10 +1,10 @@
 <section id="about" style="padding: 60px; background-color: #f5f5f5; text-align: center;">
     <h2 style="font-size: 2.5em; color: #333;">About Me</h2>
     <p style="font-size: 1.2em; margin-bottom: 20px; color: #555;">
-        Hi, I'm [Your Name]! I'm a passionate web developer and designer with a knack for creating beautiful, responsive, and user-friendly websites.
+        Hi, I'm Shaikh Rehan! I'm a passionate web developer and designer with a knack for creating beautiful, responsive, and user-friendly websites.
     </p>
     <p style="font-size: 1.2em; margin-bottom: 20px; color: #555;">
-        I specialize in front-end development, with proficiency in HTML, CSS, JavaScript, and modern frameworks like React and Vue.js. My goal is to build immersive web experiences that not only look great but also function seamlessly across all devices.
+        I specialize in front-end development, with familiar in HTML, CSS, JavaScript. My goal is to build immersive web experiences that not only look great but also function seamlessly across all devices.
     </p>
     <p style="font-size: 1.2em; margin-bottom: 20px; color: #555;">
         With a background in graphic design, I have a keen eye for visual aesthetics, ensuring that every project I work on is both visually appealing and intuitive for users. I also have experience in backend technologies like Node.js, allowing me to create full-stack applications.
