--- a/new2.html
+++ b/new2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Enhanced Website</title>
-    /*<center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>*/
+    <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
     <style>
         /* General Reset */
         * {
@@ -169,8 +169,8 @@
 
     <!-- Header Section -->
     <header id="home">
-        <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
         <h1>Welcome to My Enhanced Website</h1>
+        <h4>Your website, "My Enhanced Website," is a visually captivating and interactive platform designed with modern web design principles. Featuring a clean and dynamic layout, the site incorporates stunning animations such as smooth transitions, fading text effects, and a parallax scrolling section that draws visitors into the content. The navigation bar is sleek, fixed at the top for easy access, and offers intuitive links to various sections and external websites. The dark, semi-transparent background provides a stylish contrast, while bold typography and vibrant hover effects make the website engaging. Overall, it blends aesthetics and functionality, creating an impressive user experience.</h4>
     </header>
 
     <!-- Parallax Section -->
