--- a/new2.html
+++ b/new2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Enhanced Website</title>
-    <center><h1>Welcome to my web page...🔽</h1><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
+    <center><h2>Welcome to my web page...🔽</h2><img _ngcontent-serverapp-c67=         ""src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150"><br><br></center>
     <style>
         /* General Reset */
         * {
@@ -170,12 +170,15 @@
     <!-- Header Section -->
     <header id="home">
         <h1>Welcome to My Enhanced Website</h1>
-        <h4>Your website, "My Enhanced Website," is a visually captivating and interactive platform designed with modern web design principles. Featuring a clean and dynamic layout, the site incorporates stunning animations such as smooth transitions, fading text effects, and a parallax scrolling section that draws visitors into the content. The navigation bar is sleek, fixed at the top for easy access, and offers intuitive links to various sections and external websites. The dark, semi-transparent background provides a stylish contrast, while bold typography and vibrant hover effects make the website engaging. Overall, it blends aesthetics and functionality, creating an impressive user experience.</h4>
+        <h4>"My Enhanced Website," is a visually captivating and interactive platform designed with modern web design principles. Featuring a clean and dynamic layout, the site incorporates stunning animations such as smooth transitions, fading text effects, and a parallax scrolling section that draws visitors into the content. The navigation bar is sleek, fixed at the top for easy access, and offers intuitive links to various sections and external websites. The dark, semi-transparent background provides a stylish contrast, while bold typography and vibrant hover effects make the website engaging. Overall, it blends aesthetics and functionality, creating an impressive user experience.</h4>
     </header>
 
     <!-- Parallax Section -->
     <div class="parallax">
         <h2>Stunning Visuals</h2>
+        <h4>Here’s a paragraph you can add to the "Stunning Visuals" section:
+
+"Experience a captivating blend of design and innovation in this visually striking section. Our parallax effect brings the background to life, creating depth and movement that draw you in as you scroll. With bold typography and vibrant imagery, this section is crafted to leave a lasting impression. The smooth transitions and dynamic elements provide a modern, immersive experience that enhances the overall aesthetic of the website. Let the visuals speak for themselves as they elevate the design to new heights."</h4>
     </div>
 
     <!-- Footer Section -->
