--- a/new2.html
+++ b/new2.html
@@ -176,9 +176,7 @@
     <!-- Parallax Section -->
     <div class="parallax">
         <h2>Stunning Visuals</h2>
-        <h4>Here’s a paragraph you can add to the "Stunning Visuals" section:
-
-"Experience a captivating blend of design and innovation in this visually striking section. Our parallax effect brings the background to life, creating depth and movement that draw you in as you scroll. With bold typography and vibrant imagery, this section is crafted to leave a lasting impression. The smooth transitions and dynamic elements provide a modern, immersive experience that enhances the overall aesthetic of the website. Let the visuals speak for themselves as they elevate the design to new heights."</h4>
+        <h4>"Experience a captivating blend of design and innovation in this visually striking section. Our parallax effect brings the background to life, creating depth and movement that draw you in as you scroll. With bold typography and vibrant imagery, this section is crafted to leave a lasting impression. The smooth transitions and dynamic elements provide a modern, immersive experience that enhances the overall aesthetic of the website. Let the visuals speak for themselves as they elevate the design to new heights."</h4>
     </div>
 
     <!-- Footer Section -->
