--- a/new2.html
+++ b/new2.html
@@ -74,7 +74,7 @@
 
         nav li {
             display: inline-block;
-            margin: 0 10px;
+            margin: 0 15px;
             font-size: 1.1em;
         }
 
@@ -157,7 +157,7 @@
     <!-- Navigation -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="new2.html">Home</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="web.html" target="_blank">Website 1</a></li>
             <li><a href="web2.html" target="_blank">Website 2</a></li>
