--- a/new2.html
+++ b/new2.html
@@ -184,7 +184,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 My Stunning Website. All rights reserved.</p>
+        <p>&copy; 2024 My GitSphere Website. All rights reserved.</p>
         <p>Follow us on <a href="https://twitter.com" target="_blank">Twitter</a></p>
     </footer>
 
