--- a/new2.html
+++ b/new2.html
@@ -42,6 +42,7 @@
             text-align: center;
             background: rgba(0, 0, 0, 0.7);
             color: white;
+            flex-direction: column; /* Added to center items vertically */
         }
 
         header h1 {
@@ -58,14 +59,13 @@
 
         /* Navigation */
         nav {
-            position: fixed;
-            top: 0;
             width: 100%;
             background-color: rgba(0, 0, 0, 0.8);
             padding: 10px 0;
             text-align: center;
             z-index: 1000;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            margin-top: 20px; /* Added margin to push it down */
         }
 
         nav ul {
@@ -150,10 +150,18 @@
         html {
             scroll-behavior: smooth;
         }
-
     </style>
 </head>
 <body>
+    <!-- Header Section -->
+    <header id="home">
+        <h1>Welcome to My GitSphere Website</h1>
+        <h4>Here’s a paragraph specifically about the links in the navigation section:</h4>
+        <p>"The links in this navigation bar serve as gateways to various parts of my online presence. Each link is designed to take you to a different website, offering a curated collection of content and resources. From my personal homepage to several dedicated websites, these links ensure that you can explore everything I have to offer with ease. Each site opens in a new tab, allowing you to maintain your place while diving deeper into specific topics or projects. Whether you're visiting the 'About Me' section or discovering new external websites, these links keep the navigation smooth and efficient."</p>
+        <h4>"My Enhanced Website," is a visually captivating and interactive platform designed with modern web design principles.</h4>
+        <p>"Featuring a clean and dynamic layout, the site incorporates stunning animations such as smooth transitions, fading text effects, and a parallax scrolling section that draws visitors into the content. The navigation bar is sleek, fixed at the top for easy access, and offers intuitive links to various sections and external websites. The dark, semi-transparent background provides a stylish contrast, while bold typography and vibrant hover effects make the website engaging. Overall, it blends aesthetics and functionality, creating an impressive user experience."</p>
+    </header>
+
     <!-- Navigation -->
     <nav>
         <ul>
@@ -166,15 +174,6 @@
             <li><a href="My_Website.html" target="_blank">Website 5</a></li>
         </ul>
     </nav>
-
-    <!-- Header Section -->
-    <header id="home">
-        <h1>Welcome to My Enhanced Website</h1>
-        <h4>Here’s a paragraph specifically about the links in the navigation section:
-
-"The links in this navigation bar serve as gateways to various parts of my online presence. Each link is designed to take you to a different website, offering a curated collection of content and resources. From my personal homepage to several dedicated websites, these links ensure that you can explore everything I have to offer with ease. Each site opens in a new tab, allowing you to maintain your place while diving deeper into specific topics or projects. Whether you're visiting the 'About Me' section or discovering new external websites, these links keep the navigation smooth and efficient."</h4>
-        <h4>"My Enhanced Website," is a visually captivating and interactive platform designed with modern web design principles. Featuring a clean and dynamic layout, the site incorporates stunning animations such as smooth transitions, fading text effects, and a parallax scrolling section that draws visitors into the content. The navigation bar is sleek, fixed at the top for easy access, and offers intuitive links to various sections and external websites. The dark, semi-transparent background provides a stylish contrast, while bold typography and vibrant hover effects make the website engaging. Overall, it blends aesthetics and functionality, creating an impressive user experience.</h4>
-    </header>
 
     <!-- Parallax Section -->
     <div class="parallax">
