--- a/new2.html
+++ b/new2.html
@@ -137,7 +137,7 @@
     <!-- Header Section -->
     <header id="home">
         <center>
-            <h1><br>Welcome to my GitSphere web page...🔽</h1>
+            <h1>Welcome to my GitSphere web page...🔽</h1>
             <img src="https://cdn.mgmtech.org/static/mgmu.ac.in/assets/images/LogoMGM.svg" class="img-fluid" width="180" height="150">
             <br><br>
         </center>
