--- a/GitSphere.html
+++ b/GitSphere.html
@@ -186,6 +186,7 @@
     <footer>
         <p>&copy; 2024 My GitSphere Website. All rights reserved.</p>
         <p>Follow us on <a href="https://twitter.com" target="_blank">Twitter</a></p>
+        <p>Follow us on <a href="https://instagram.com" target="_blank">Twitter</a></p>
     </footer>
 
 </body>
