--- a/new2.html
+++ b/new2.html
@@ -40,7 +40,7 @@
             align-items: center; /* Center items horizontally */
             justify-content: center; /* Center items vertically */
             text-align: center;
-            background: rgba(0, 0, 0, 0.7);
+            /*background: rgba(0, 0, 0, 0.7);*/
             color: white;
             padding: 20px 0; /* Added padding for spacing */
         }
